[package]
name = "cakes-results"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abd-clam = { path = "../clam/abd-clam" }
distances = "1.1.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-npy = "0.8.1"
